-- tiga&tiga_test: 更新文档和升级过时方法